--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     },
     "devDependencies": {
         "axios": "^1.6.4",
+        "daisyui": "^4.12.2",
         "laravel-vite-plugin": "^1.0.0",
+        "tailwindcss": "^3.4.4",
         "vite": "^5.0.0"
     }
 }
