add status column

--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for tasklist-dry-morning-5378 on 2024-06-19T01:40:53Z
+# fly.toml app configuration file generated for tasklist-thrumming-star-3521 on 2024-06-26T04:39:24Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'tasklist-dry-morning-5378'
+app = 'tasklist-thrumming-star-3521'
 primary_region = 'nrt'
 console_command = 'php /var/www/html/artisan tinker'
 
@@ -13,15 +13,15 @@ console_command = 'php /var/www/html/artisan tinker'
     PHP_VERSION = '8.2'
 
 [env]
-  APP_URL = 'https://tasklist-dry-morning-5378.fly.dev'
-  APP_NAME = 'tasklist-dry-morning-5378'
   APP_ENV = 'production'
+  APP_URL = 'https://tasklist-thrumming-star-3521.fly.dev'
+  APP_NAME = 'Laravel'
   APP_DEBUG = false
   DB_CONNECTION = 'pgsql'
   DB_HOST = 'aws-0-ap-northeast-1.pooler.supabase.com'
   DB_PORT = 6543
   DB_DATABASE = 'postgres'
-  DB_USERNAME = 'postgres.wptmhikciimfmmhvyuxn'
+  DB_USERNAME = 'postgres.xudqgqmwilcyhapkivpd'
   LOG_CHANNEL = 'stderr'
   LOG_LEVEL = 'info'
   LOG_STDERR_FORMATTER = 'Monolog\Formatter\JsonFormatter'
@@ -38,4 +38,3 @@ console_command = 'php /var/www/html/artisan tinker'
 
 [[vm]]
   size = 'shared-cpu-1x'
-  memory = '256'
